Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8575

sanity test_27u: @@@@@@ FAIL: 1 objects created on OST-0. See /mnt/fs1/f27u.sanity.getstripe

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • None
    • None
    • 3
    • 9223372036854775807

      stdout.log
      sanity test_27u: @@@@@@ FAIL: 1 objects created on OST-0. See /mnt/fs1/f27u.sanity.getstripe
      Trace dump:
      = /usr/lib64/lustre/tests/test-framework.sh:4671:error()
      = /usr/lib64/lustre/tests/sanity.sh:1582:test_27u()
      = /usr/lib64/lustre/tests/test-framework.sh:4931:run_one()
      = /usr/lib64/lustre/tests/test-framework.sh:4967:run_one_logged()
      = /usr/lib64/lustre/tests/test-framework.sh:4773:run_test()
      = /usr/lib64/lustre/tests/sanity.sh:1584:main()
      Dumping lctl log to /tmp/test_logs/1439501816/sanity.test_27u.*.1439501833.log
      dvtrack303: ssh: Could not resolve hostname hvtlabmrpcli0041: Temporary failure in name resolution
      dvtrack302: ssh: Could not resolve hostname hvtlabmrpcli0041: Temporary failure in name resolution
      dvtrack303: rsync: connection unexpectedly closed (0 bytes received so far) [sender]
      dvtrack303: rsync error: unexplained error (code 255) at io.c(600) [sender=3.0.6]
      dvtrack302: rsync: connection unexpectedly closed (0 bytes received so far) [sender]
      dvtrack302: rsync error: unexplained error (code 255) at io.c(600) [sender=3.0.6]
      pdsh@hvtlabmrpcli0041: dvtrack302: ssh exited with exit code 255
      pdsh@hvtlabmrpcli0041: dvtrack303: ssh exited with exit code 255
      dvtrack304: ssh: Could not resolve hostname hvtlabmrpcli0041: Temporary failure in name resolution
      dvtrack304: rsync: connection unexpectedly closed (0 bytes received so far) [sender]
      dvtrack304: rsync error: unexplained error (code 255) at io.c(600) [sender=3.0.6]

      stderr.log
      running as uid/gid/euid/egid 500/500/500/500, groups:
      [touch] [/mnt/fs1/d0_runas_test/f29786]
      mke2fs 1.42.7.x1 (06-Jun-2013)

            ys Yang Sheng
            jadhav.vikram VIKRAM BABASO JADHAV (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: